--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,27 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+header{
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+
+  border-bottom: 1em solid transparent ;
+  border-image: linear-gradient(to right, #000c66, #0000ffbe  ,#000c66) 1 ;
+
+  padding: 0 1em 0 1em;
+  
+}
+
+#logoandname{
+  display: flex;
+  align-items: center;
+}
+#logoandname-name{
+  margin-left: 1em ;
+  font-weight: bold;
 }
