--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,11 +29,11 @@ body {
 header{
   display: flex;
   flex-direction: row;
-
   justify-content: space-between;
 
   border-bottom: 1em solid transparent ;
   border-image: linear-gradient(to right, #000c66, #0000ffbe  ,#000c66) 1 ;
+  border-image: linear-gradient(to right, #7ec8e38d, #7ec8e335, #7ec8e389) 1 ;
 
   padding: 0 1em 0 1em;
   
@@ -43,7 +43,42 @@ header{
   display: flex;
   align-items: center;
 }
+
 #logoandname-name{
   margin-left: 1em ;
   font-weight: bold;
+}
+
+#main-section{
+  height: 90vh;
+  padding: 2em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#main-div{
+
+  
+  border-radius: 1em;
+  padding: 1em;
+
+  box-shadow: 0px 0px 30px 0px #7ec8e397;
+  width: 70vw;
+  height: 60vh;
+
+
+}
+
+footer{
+  height: 10vh;
+}
+
+.boutons{
+  border: solid white 1px;
+  padding: 5px;
+  margin: 8px;
+  border-radius: 0.75em;
+  width: 10em ;
 }
