--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,8 +50,8 @@ header{
 }
 
 #main-section{
-  height: 90vh;
-  padding: 2em;
+  height: 90dvh;
+  padding: 5px;
 
   display: flex;
   justify-content: center;
@@ -68,7 +68,7 @@ header{
 
   box-shadow: 0px 0px 30px 0px #7ec8e397;
   width: 70vw;
-  height: 60vh;
+  height: 70dvh;
 
   overflow: auto;
 
@@ -107,4 +107,12 @@ footer{
   width: 10em ;
 
   @apply hover:cursor-pointer ;
+}
+
+#main-div-body-pics{
+  display: flex;
+
+  justify-content: space-between;
+
+  overflow-x: auto;
 }
