--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,16 +49,16 @@ header{
   font-weight: bold;
 }
 
-#main-section{
+.main-section{
   height: 90dvh;
   padding: 5px;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
-#main-div{
+.main-div{
 
   display: grid;
   grid-template-rows: 1fr 5fr 1fr;
@@ -115,4 +115,19 @@ footer{
   justify-content: space-between;
 
   overflow-x: auto;
+}
+
+.slide-btn{
+
+  text-align: center;
+
+  text-shadow: 0px 0px 25px 0px #7ec8e3;
+
+  font-size: 50px;
+
+}
+
+
+.cacher{
+  display: none;
 }
